# docdiff

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
examples/: file1.txt  file2.txt  file3.txt  file4.txt
src/: cli.rs  lib.rs  main.rs  utils.rs
src/algorithm/: document_distance.rs  mod.rs
src/commands/: diff.rs  info.rs  mod.rs
tests/: cli_tests.rs  diff_command_tests.rs  document_distance_tests.rs
