[package]
name = "docdiff"
version = "1.1.0"
edition = "2024"
authors = ["Edmo Lima <soedmolima@gmail.com>"]
description = "A CLI tool for comparing two files using document distance algorithms."
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.18"
colored = "3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"